@@ -4,6 +4,7 @@ CHANGES:
 - Archived projects are filtered out when creating a new bug. (Alex Pagnoni)
 - Opened by and assigned to fields are automatically set to the current user
   when creating a new bug. (Alex Pagnoni)
+- Added project as item parent type. (Alex Pagnoni)
 
 NEW FEATURES:
 - Added project autocomplete when creating a new bug. (Alex Pagnoni)
